Finalized experiment plan